; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ad7606.c_ad7606_read_samples.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ad7606.c_ad7606_read_samples.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ad7606_state = type { i32, %struct.TYPE_4__*, i64, i32*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 (i32, i32, i32*)* }
%struct.TYPE_3__ = type { i32 }

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ad7606_state*)* @ad7606_read_samples to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad7606_read_samples(%struct.ad7606_state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ad7606_state*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.ad7606_state* %0, %struct.ad7606_state** %3, align 8
  %7 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %8 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %7, i32 0, i32 4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %4, align 4
  %12 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %13 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %12, i32 0, i32 3
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %5, align 8
  %15 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %16 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %50

19:                                               ; preds = %1
  %20 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %21 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %20, i32 0, i32 1
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %23, align 8
  %25 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %26 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 %24(i32 %27, i32 1, i32* %28)
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %19
  %33 = load i32, i32* %6, align 4
  store i32 %33, i32* %2, align 4
  br label %62

34:                                               ; preds = %19
  %35 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %36 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @gpiod_get_value(i64 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %45, label %40

40:                                               ; preds = %34
  %41 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %42 = call i32 @ad7606_reset(%struct.ad7606_state* %41)
  %43 = load i32, i32* @EIO, align 4
  %44 = sub nsw i32 0, %43
  store i32 %44, i32* %2, align 4
  br label %62

45:                                               ; preds = %34
  %46 = load i32*, i32** %5, align 8
  %47 = getelementptr inbounds i32, i32* %46, i32 1
  store i32* %47, i32** %5, align 8
  %48 = load i32, i32* %4, align 4
  %49 = add i32 %48, -1
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %45, %1
  %51 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %52 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %51, i32 0, i32 1
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 0
  %55 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %54, align 8
  %56 = load %struct.ad7606_state*, %struct.ad7606_state** %3, align 8
  %57 = getelementptr inbounds %struct.ad7606_state, %struct.ad7606_state* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = load i32, i32* %4, align 4
  %60 = load i32*, i32** %5, align 8
  %61 = call i32 %55(i32 %58, i32 %59, i32* %60)
  store i32 %61, i32* %2, align 4
  br label %62

62:                                               ; preds = %50, %40, %32
  %63 = load i32, i32* %2, align 4
  ret i32 %63
}

declare dso_local i32 @gpiod_get_value(i64) #1

declare dso_local i32 @ad7606_reset(%struct.ad7606_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
